Added electricity and inventory block entities.

--- a/src/main/resources/assets/engineer/lang/en_us.json
+++ b/src/main/resources/assets/engineer/lang/en_us.json
@@ -1,4 +1,5 @@
 {
+  "itemGroup.engineering": "Engineering",
   "item.engineer.aluminum_ingot": "Aluminum Ingot",
   "item.engineer.titanium_ingot": "Titanium ingot",
   "item.engineer.silver_ingot": "Silver ingot",
