--- a/src/main/resources/assets/engineer/lang/fr_fr.json
+++ b/src/main/resources/assets/engineer/lang/fr_fr.json
@@ -1,4 +1,5 @@
 {
+  "itemGroup.engineering": "Engineering",
   "item.engineer.aluminum_ingot": "Lingot d'aluminium",
   "item.engineer.titanium_ingot": "Lingot de titane",
   "item.engineer.silver_ingot": "Lingot d'argent",
